--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ evaluation_function_dev = "evaluation_function.dev:dev"
 [tool.poetry.dependencies]
 python = "^3.9"
 typing_extensions = "^4.12.2"
+pydantic = "^2.0"
+lark = "^1.1"
 lf_toolkit = { git = "https://github.com/lambda-feedback/toolkit-python.git", branch = "main", extras = [
     "ipc",
 ] }
