--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.11"
 typing_extensions = "^4.12.2"
 pydantic = "^2.0"
 lark = "^1.1"
+z3-solver = "^4.15.4"
 lf_toolkit = { git = "https://github.com/lambda-feedback/toolkit-python.git", branch = "main", extras = [
     "ipc",
 ] }
